--- a/src/stories/button.css
+++ b/src/stories/button.css
@@ -1,47 +1,48 @@
-button {
-  background-color:var(--color-button-background-primary);
-  color: #FFF;
+/* Verifier la font family roboto au global */
+
+.storybook-button {
+  font-weight: 700;
+  cursor: pointer;
   padding: 12px 24px;
   border-radius: 24px;
-  border: 1px solid var(--color-button-border-primary);
-  font-weight: 700;
   font-size: 16px;
 }
 
-button:hover {
+/*BUTTON TYPES*/
+
+/*PRIMARY*/
+.storybook-button--primary {
+  background-color:var(--color-button-background-primary);
+  border: 1px solid var(--color-button-border-primary);
+  color: #FFF;
+}
+
+.storybook-button--primary:hover {
   background-color:  var(--color-button-background-primary-hover);
   border-color: var(--color-button-border-primary-hover);
   box-shadow: 4px 8px 8px 2px #1F3A934D;
 }
 
-button:active {
+.storybook-button--primary:active {
   box-shadow: 0px 2px 3px 1px rgba(1, 1, 122, 0.6);
 }
 
-.storybook-button {
-  font-family: 'Nunito Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  font-weight: 700;
-  border: 0;
-  border-radius: 3em;
-  cursor: pointer;
-  display: inline-block;
-  line-height: 1;
-}
-
-/*BUTTON TYPES*/
-
-.storybook-button--primary {
-  color: #FFF;
-  padding: 12px 24px;
-  border-radius: 24px;
-  font-weight: 700;
-  font-size: 16px;
-}
+/*SECONDARY*/
 .storybook-button--secondary {
   color: #333;
   background-color: transparent;
   box-shadow: rgba(0, 0, 0, 0.15) 0px 0px 0px 1px inset;
+  border: 1px solid var(--color-button-border-secondary);
 }
+
+.storybook-button--secondary:hover {
+  border: 4px solid var(--color-button-border-secondary-hover);
+  box-shadow: 4px 8px 8px 2px #1F3A934D;
+
+}
+
+/*DESTRUCTIVE*/
+
 .storybook-button--small {
   font-size: 12px;
   padding: 10px 16px;
