--- a/src/tokens/colors.css
+++ b/src/tokens/colors.css
@@ -42,6 +42,8 @@
     --color-button-border-primary: var(--color-navy-500);
     --color-button-background-primary-hover: var(--color-navy-700);
     --color-button-border-primary-hover:var(--color-navy-700);
+    --color-button-border-secondary:var(--color-navy-500);
+    --color-button-border-secondary-hover:var(--color-navy-700);
 
 
 }
